[tool.poetry]
name = "arcade_gui"
version = "0.1.0"
description = ""
authors = ["Maic Siemering <maic@siemering.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
arcade = "^2.3.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
